<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.NewsAggregatorApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="5dp"
            app:popupTheme="@style/Theme.NewsAggregatorApp.PopupOverlay"
            android:theme="@style/Theme.NewsAggregatorApp.ToolBarOverlay" />

        <com.google.android.material.tabs.TabLayout
            style="@style/AppTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabSport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport_text" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabPolitics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/politics_text" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabCovid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_text" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabEurope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/europe_text" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabTottenham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tottenham_text" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabTennis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tennis_text" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabGaming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gaming_text" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>