<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_red"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/bale_headline"
            android:textColor="@color/white_200"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/articleImage"
            android:contentDescription="@string/article_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/bale" />

        <TextView
            android:id="@+id/textViewArticle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/bale_full_article_example"
            android:textColor="?android:attr/textColorPrimary" />
    </LinearLayout>
</ScrollView>