<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_200"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/googleCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="350dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        android:backgroundTint="@color/white_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageGoogle"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/google" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textGoogle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="end|center_vertical"
                android:layout_gravity="end"
                android:paddingHorizontal="10dp"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/facebookCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/facebookblue"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleCard">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageFacebook"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="4dp"
                app:srcCompat="@drawable/facebook" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textFacebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="end|center_vertical"
                android:paddingHorizontal="10dp"
                android:text="@string/sign_in_with_facebook"
                android:textColor="@color/white_200" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/emailCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/googlered"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebookCard">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageEmail"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_baseline_email_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="end|center_vertical"
                android:paddingHorizontal="10dp"
                android:text="@string/sign_in_with_email"
                android:textColor="@color/white_200" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView2"
        android:layout_width="237dp"
        android:layout_height="546dp"
        android:layout_marginBottom="356dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mi_news_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>